--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.55",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,7 +21,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.12",
     "@react-email/render": "^0.0.9-canary.2",
-    "ai": "^2.2.30",
+    "ai": "^2.2.37",
     "axios": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +29,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
+    "eventsource-parser": "^3.0.0",
     "lucide-react": "^0.303.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
